--- a/Kontak.HTML
+++ b/Kontak.HTML
@@ -12,7 +12,7 @@
   <section>
     <header>
       <ul class="Navi">
-        <li><a href="Home.HTML">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="Profile.HTML">Profile</a></li>
         <li><a href="Portofolio.HTML">Portofolio</a></li>
         <li><a href="Services.HTML">Services</a></li>
