--- a/Portofolio.HTML
+++ b/Portofolio.HTML
@@ -17,7 +17,7 @@
     <h1>Project Kami</h1>
     <header>
       <ul class="Navi">
-        <li><a href="Home.HTML">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="Profile.HTML">Profile</a></li>
         <li><a href="Portofolio.HTML">Portofolio</a></li>
         <li><a href="Services.HTML">Services</a></li>
