--- a/Kontak.HTML
+++ b/Kontak.HTML
@@ -88,7 +88,7 @@
 
   <footer class="footer-distributed">
     <div class="footer-left">
-      <img src="krida.PNG" height="200" width="200" alt="">
+      <img src= alt="">
     </div>
 
     <div class="footer-center">
