--- a/Kontak.HTML
+++ b/Kontak.HTML
@@ -88,7 +88,7 @@
 
   <footer class="footer-distributed">
     <div class="footer-left">
-      <img src= alt="">
+      <p> Krida </p>
     </div>
 
     <div class="footer-center">
