--- a/Kontak.HTML
+++ b/Kontak.HTML
@@ -7,12 +7,16 @@
   <title>Krida</title>
   <link rel="stylesheet" href="Kontak.css">
   <script src="https://kit.fontawesome.com/457033bed9.js" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+
+
 </head>
 <body>
   <section>
     <header>
       <ul class="Navi">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="Home.HTML">Home</a></li>
         <li><a href="Profile.HTML">Profile</a></li>
         <li><a href="Portofolio.HTML">Portofolio</a></li>
         <li><a href="Services.HTML">Services</a></li>
@@ -29,21 +33,21 @@
       </div>
       <div class="container">
         <div class="contactInfo">
-          <div class="box">
+          <div class="lox">
             <div class = "icon"><i class="fa-solid fa-location-dot"></i></div>
             <div class="kalimat">
               <h2>Alamat</h2>
               <p>Bojong gede, buaran</p>
             </div>
           </div>
-          <div class="box">
+          <div class="lox">
             <div class = "icon"><i class="fa-solid fa-phone"></i></div>
             <div class="kalimat">
               <h2>Telepon</h2>
               <p>22222222222</p>
             </div>
           </div>
-          <div class="box">
+          <div class="lox">
             <div class = "icon"><i class="fa-solid fa-envelope"></i></div>
             <div class="kalimat">
               <h2>Email</h2>
@@ -54,19 +58,19 @@
         <div class="contactform">
           <form>
             <h3>Send Message</h3>
-            <div class="Inputbox">
+            <div class="Inputlox">
               <input type="text" name="" required="required">
               <span>Full Name</span>
             </div>
-            <div class="Inputbox">
+            <div class="Inputlox">
               <input type="text" name="" required="required">
               <span>Email</span>
             </div>
-            <div class="Inputbox">
+            <div class="Inputlox">
               <textarea required="required"></textarea>
               <span>Type Your Message</span>
             </div>
-            <div class="Inputbox">
+            <div class="Inputlox">
               <input type="submit" name="" value="Send">
             </div>
           </form>
@@ -76,6 +80,7 @@
       </div>
     </section>
   </section>
+
   <script type="text/javascript">
   function toggleMenu(){
     const menuToggle = document.querySelector('.toggle');
@@ -86,39 +91,64 @@
 
   </script>
 
-  <footer class="footer-distributed">
-    <div class="footer-left">
-      <p> Krida </p>
+  <footer>
+    <div class="main-content">
+      <div class="left box">
+        <h2>About us</h2>
+        <div class="content">
+          <p>CodinNepal is a YouTube channel where you can learn web designing, web development, ui/ux designing, html css tutorial, hover animation and effects, javascript and jquery tutorial and related so on.</p>
+          <div class="social">
+            <a href="https://facebook.com/coding.np"><span class="fab fa-facebook-f"></span></a>
+            <a href="#"><span class="fab fa-twitter"></span></a>
+            <a href="https://instagram.com/coding.np"><span class="fab fa-instagram"></span></a>
+            <a href="https://youtube.com/c/codingnepal"><span class="fab fa-youtube"></span></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="center box">
+        <h2>Address</h2>
+        <div class="content">
+          <div class="place">
+            <span class="fas fa-map-marker-alt"></span>
+            <span class="text">Birendranagar, Surkhet</span>
+          </div>
+          <div class="phone">
+            <span class="fas fa-phone-alt"></span>
+            <span class="text">+089-765432100</span>
+          </div>
+          <div class="email">
+            <span class="fas fa-envelope"></span>
+            <span class="text">abc@example.com</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="right box">
+        <h2>Contact us</h2>
+        <div class="content">
+          <form action="#">
+            <div class="email">
+              <div class="text">Email *</div>
+              <input type="email" required>
+            </div>
+            <div class="msg">
+              <div class="text">Message *</div>
+              <textarea rows="2" cols="25" required></textarea>
+            </div>
+            <div class="btn">
+              <button type="submit">Send</button>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
-
-    <div class="footer-center">
-      <div>
-        <i class="fa fa-map-marker"></i>
-        <p><span>Dolores</span>
-        Bekasi</p>
-      </div>
-
-      <div>
-        <i class="fa fa-phone"></i>
-        <p>09289741924</p>
-      </div>
-
-      <div>
-        <i class="fa fa-envelope"></i>
-        <p>Adrian@gmail.com</p>
-      </div>
-
-    </div>
-
-    <div class="footer-right">
-      <p class="footer-company-about">
-        <span>About the Company</span>
-        <strong>PT. Krida Indotama Teknologi</strong> adalah sebuah perusahaan software house yang menyediakan sistem digital yang komprehensif berbasis website dan aplikasi sesuai dengan kebutuhan client untuk dapat mempermudah dan memoderniasi pekerjaan.
-      </p>
-
+    <div class="bottom">
+      <center>
+        <span class="credit">Created By <a href="https://youtube.com/c/codingnepal">CodingNepal</a> | </span>
+        <span class="far fa-copyright"></span><span> 2020 All rights reserved.</span>
+      </center>
     </div>
   </footer>
-
-
 </body>
 </html>
