--- a/index.html
+++ b/index.html
@@ -43,27 +43,32 @@
     <div class="baganproval">
 
       <div class="baganprov">
-        <h4><i class="fa-solid fa-puzzle-piece"></i> Solutive</h4>
+        <i class="fa-solid fa-puzzle-piece"></i>
+        <h4>Solutive</h4>
         <p>Memberikan inovasi terbaik kepada klien untuk mendapatkan <span>produk yang solutif</span> .</p>
       </div>
 
       <div class="baganprov">
-        <h4><i class="fa-solid fa-bullseye"></i> Accuracy</h4>
+        <i class="fa-solid fa-bullseye"></i>
+        <h4>Accuracy</h4>
         <p>Menghasilkan produk yang dapat <span>beroperasi secara efektif</span> memenuhi target yang di tentukan.</p>
       </div>
 
       <div class="baganprov">
-        <h4><i class="fa-sharp fa-solid fa-people-group"></i> Good Experience</h4>
+        <i class="fa-sharp fa-solid fa-people-group"></i>
+        <h4>Good Experience</h4>
         <p>Membuat desain sistem dan tampilan yang <span>mudah untuk digunakan</span> pengguna.</p>
       </div>
 
       <div class="baganprov">
-        <h4><i class="fa-solid fa-server"></i> Cloud Based </h4>
+        <i class="fa-solid fa-server"></i>
+        <h4>Cloud Based </h4>
         <p>Membangun seluruh sistem baik website, aplikasi, database, dan server pada <span>Cloud yang andal</span>.</p>
       </div>
 
     </div>
   </div>
+  
     <div class="Ourserv">
       <h5>Our<span> Services</span></h5>
 
