--- a/Profile.HTML
+++ b/Profile.HTML
@@ -42,7 +42,7 @@
       </div>
       <div class="content">
         <h5>Our Vision</h5>
-        <p>Berinovasi tanpa batas untuk memberikan kebermanfaatan tanpa henti bagi semua klien dan pengguna.</p>
+        <p class="Visi">Berinovasi tanpa batas untuk memberikan kebermanfaatan tanpa henti bagi semua klien dan pengguna.</p>
 
       </div>
     </div>
