--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
 
 
 
-      <script>
+       <script>
       const testimonials = [
 {
-  name: "Perkasa Abdi Buana",
-  job: "CEO, Fashworks",
+  name: "Muhammad Yusuf",
+  job: "Manager Project Pengamanan",
   image: "Prabhu.png",
   testimonial:
-    "Neque volutpat ac tincidunt vitae semper quis lectus nulla at volutpat diam ut venenatis tellus in metus vulputate eu scelerisque felis imperdiet proin fermentum leo vel orci porta non pulvinar neque laoreet suspendisse interdum consectetur",
+    "Krida mampu menerjemahkan kebutuhan PRABHU menjadi tools absensi, HRIS dan payroll yang powerful. Web dan aplikasi yang mereka tawarkan user friendly, mudah digunakan, dapat dikustomisasi sesuai kebutuhan PRABHU. Krida juga memiliki support team yang baik dan responsif sehingga sampai saat ini tidak ada kendala berarti dalam kerjasama kami.",
 },
 {
   name: "Katey Topaz",
@@ -156,6 +156,7 @@ let displayTestimonial = () => {
 testimonialContainer.innerHTML = `
   <img src=${testimonials[i].image}>
   <h3>${testimonials[i].name}</h3>
+  <h6>${testimonials[i].job}</h6>
   <p>${testimonials[i].testimonial}</p>
 `;
 };
@@ -175,7 +176,8 @@ window.onload = displayTestimonial;
           <div class="left box">
             <h2>About us</h2>
             <div class="content">
-              <p>CodinNepal is a YouTube channel where you can learn web designing, web development, ui/ux designing, html css tutorial, hover animation and effects, javascript and jquery tutorial and related so on.</p>              
+              <p>PT. Krida Indotama Teknologi adalah sebuah perusahaan software house yang menyediakan sistem digital yang komprehensif berbasis website dan aplikasi sesuai dengan kebutuhan client untuk dapat mempermudah dan memoderniasi pekerjaan.</p>
+
             </div>
           </div>
 
@@ -184,15 +186,15 @@ window.onload = displayTestimonial;
             <div class="content">
               <div class="place">
                 <span class="fas fa-map-marker-alt"></span>
-                <span class="text">Birendranagar, Surkhet</span>
+                <span class="text">18 Office Park, Jakarta Selatan</span>
               </div>
               <div class="phone">
                 <span class="fas fa-phone-alt"></span>
-                <span class="text">+089-765432100</span>
+                <span class="text">(021) 50633500</span>
               </div>
               <div class="email">
                 <span class="fas fa-envelope"></span>
-                <span class="text">abc@example.com</span>
+                <span class="text">krida.technology@gmail.com</span>
               </div>
             </div>
           </div>
