--- a/Services.HTML
+++ b/Services.HTML
@@ -33,55 +33,55 @@
         <div class="baganourser">
           <i class="fa-solid fa-desktop"></i>
           <h4>Web Development</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Mengembangkan kebutuhan digitalisasi bisnis klien dengan menggunakan website yang user friendly agar mudah digunakan oleh berbagai stakeholder.</p>
         </div>
 
         <div class="baganourser">
           <i class="fa-solid fa-mobile"></i>
           <h4>Android & iOS Development</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Memberikan solusi digital kepada client dengan membuat aplikasi pada smartphone android dan ios sesuai dengan keinginan dan kebutuhan klien.</p>
         </div>
 
         <div class="baganourser">
           <i class="fa-solid fa-headset"></i>
           <h4>System Maintenance & Support</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-
-        <div class="baganourser">
-          <i class="fa-solid fa-list-check"></i>
-          <h4>Electronic Management</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Membantu client dalam memelihara sistem yang sudah dibangun dengan tenaga ahli yang mumpuni, profesional, dan ramah.</p>
         </div>
 
         <div class="baganourser">
           <i class="fa-solid fa-clipboard-user"></i>
           <h4>Tenant Attendance</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Menghadirkan solusi digital dalam pengelolaan untuk client yang memiliki banyak kios, ruko, toko, apartemen, rumah kontrakan, dan koskosan.</p>
         </div>
 
         <div class="baganourser">
           <i class="fa-sharp fa-regular fa-eye"></i>
           <h4>E-Patrol</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Membangun sistem berbasiskan aplikasi untuk digunakan klien dan pengguna dalam melakukan patroli pemantauan area sehingga lebih efisien, efektif, dan mudah.</p>
+        </div>
+
+        <div class="baganourser">
+          <i class="fa-solid fa-building"></i>
+          <h4>Asset Management System</h4>
+          <p>Mengembangkan sistem digital berbasiskan website dan aplikasi untuk mengelola seluruh aset perusahaan secara komprehensif dan end to end untuk meningkatkan efisiensi serta akuntabilitas yang baik.</p>
         </div>
 
         <div class="baganourser">
           <i class="fa-solid fa-list-check"></i>
           <h4>Activity Report</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Memberikan solusi kepada klien yang membutuhkan laporan kegiatan maupun kejadian dengan detil laporan yang inklusif dan cepat secara mudah pula digunakan.</p>
         </div>
 
         <div class="baganourser">
           <i class="fa-solid fa-file-invoice"></i>
           <h4>Payroll and Tax Accounting</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Menghadirkan solusi dalam perhitungan penggajian, slip gaji, dan perhitungan pajak untuk klien sehingga dapat menghemat waktu, dan mengurangi kesalahan dalam perhitungan.</p>
         </div>
 
         <div class="baganourser">
           <i class="fa-solid fa-business-time"></i>
           <h4>Timelog</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>membantu klien dengan sistem digital untuk memantau aktivitas karyawan, merekan catatan waktu yang dihabiskan untuk melakukan pekerjaan tersebut, dan menganalisisis produktivitas karyawan.</p>
         </div>
       </div>
     </div>
@@ -98,53 +98,52 @@
   </script>
 
   <footer>
-        <div class="main-content">
-          <div class="left box">
-            <h2>About us</h2>
-            <div class="content">
-              <p>CodinNepal is a YouTube channel where you can learn web designing, web development, ui/ux designing, html css tutorial, hover animation and effects, javascript and jquery tutorial and related so on.</p>
-              
-            </div>
-          </div>
+    <div class="main-content">
+      <div class="left box">
+        <h2>About us</h2>
+        <div class="content">
+          <p>PT. Krida Indotama Teknologi adalah sebuah perusahaan software house yang menyediakan sistem digital yang komprehensif berbasis website dan aplikasi sesuai dengan kebutuhan client untuk dapat mempermudah dan memoderniasi pekerjaan.</p>
 
-          <div class="center box">
-            <h2>Address</h2>
-            <div class="content">
-              <div class="place">
-                <span class="fas fa-map-marker-alt"></span>
-                <span class="text">Birendranagar, Surkhet</span>
-              </div>
-              <div class="phone">
-                <span class="fas fa-phone-alt"></span>
-                <span class="text">+089-765432100</span>
-              </div>
-              <div class="email">
-                <span class="fas fa-envelope"></span>
-                <span class="text">abc@example.com</span>
-              </div>
-            </div>
-          </div>
+        </div>
+      </div>
 
-          <div class="right box">
-            <h2>Contact us</h2>
-            <div class="content">
-              <form action="#">
-                <div class="email">
-                  <div class="text">Email *</div>
-                  <input type="email" required>
-                </div>
-                <div class="msg">
-                  <div class="text">Message *</div>
-                  <textarea rows="2" cols="25" required></textarea>
-                </div>
-                <div class="btn">
-                  <button type="submit">Send</button>
-                </div>
-              </form>
-            </div>
+      <div class="center box">
+        <h2>Address</h2>
+        <div class="content">
+          <div class="place">
+            <span class="fas fa-map-marker-alt"></span>
+            <span class="text">18 Office Park, Jakarta Selatan</span>
+          </div>
+          <div class="phone">
+            <span class="fas fa-phone-alt"></span>
+            <span class="text">(021) 50633500</span>
+          </div>
+          <div class="email">
+            <span class="fas fa-envelope"></span>
+            <span class="text">krida.technology@gmail.com</span>
           </div>
         </div>
-      </footer>
+      </div>
 
+      <div class="right box">
+        <h2>Contact us</h2>
+        <div class="content">
+          <form action="#">
+            <div class="email">
+              <div class="text">Email *</div>
+              <input type="email" required>
+            </div>
+            <div class="msg">
+              <div class="text">Message *</div>
+              <textarea rows="2" cols="25" required></textarea>
+            </div>
+            <div class="btn">
+              <button type="submit">Send</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
