--- a/Portofolio.HTML
+++ b/Portofolio.HTML
@@ -43,7 +43,7 @@
   job: "CEO, Fashworks",
   image: "Prabhu.png",
   testimonial:
-    "Neque volutpat ac tincidunt vitae semper quis lectus nulla at volutpat diam ut venenatis tellus in metus vulputate eu scelerisque felis imperdiet proin fermentum leo vel orci porta non pulvinar neque laoreet suspendisse interdum consectetur",
+    "PT. Krida Indotama Teknologi menjadi digitalization partner untuk PT. Perkasa Abdi Buana dengan menghadirkan database karyawan, absensi digital, employee self-service, patroli elektronik, laporan aktivitas, payroll & tax, dan timelog.",
 },
 {
   name: "Katey Topaz",
@@ -105,52 +105,53 @@ window.onload = displayTestimonial;
   </section>
 
   <footer>
-        <div class="main-content">
-          <div class="left box">
-            <h2>About us</h2>
-            <div class="content">
-              <p>CodinNepal is a YouTube channel where you can learn web designing, web development, ui/ux designing, html css tutorial, hover animation and effects, javascript and jquery tutorial and related so on.</p>
-              
-            </div>
-          </div>
+    <div class="main-content">
+      <div class="left box">
+        <h2>About us</h2>
+        <div class="content">
+          <p>PT. Krida Indotama Teknologi adalah sebuah perusahaan software house yang menyediakan sistem digital yang komprehensif berbasis website dan aplikasi sesuai dengan kebutuhan client untuk dapat mempermudah dan memoderniasi pekerjaan.</p>
 
-          <div class="center box">
-            <h2>Address</h2>
-            <div class="content">
-              <div class="place">
-                <span class="fas fa-map-marker-alt"></span>
-                <span class="text">Birendranagar, Surkhet</span>
-              </div>
-              <div class="phone">
-                <span class="fas fa-phone-alt"></span>
-                <span class="text">+089-765432100</span>
-              </div>
-              <div class="email">
-                <span class="fas fa-envelope"></span>
-                <span class="text">abc@example.com</span>
-              </div>
-            </div>
-          </div>
+        </div>
+      </div>
 
-          <div class="right box">
-            <h2>Contact us</h2>
-            <div class="content">
-              <form action="#">
-                <div class="email">
-                  <div class="text">Email *</div>
-                  <input type="email" required>
-                </div>
-                <div class="msg">
-                  <div class="text">Message *</div>
-                  <textarea rows="2" cols="25" required></textarea>
-                </div>
-                <div class="btn">
-                  <button type="submit">Send</button>
-                </div>
-              </form>
-            </div>
+      <div class="center box">
+        <h2>Address</h2>
+        <div class="content">
+          <div class="place">
+            <span class="fas fa-map-marker-alt"></span>
+            <span class="text">18 Office Park, Jakarta Selatan</span>
+          </div>
+          <div class="phone">
+            <span class="fas fa-phone-alt"></span>
+            <span class="text">(021) 50633500</span>
+          </div>
+          <div class="email">
+            <span class="fas fa-envelope"></span>
+            <span class="text">krida.technology@gmail.com</span>
           </div>
         </div>
-      </footer>
+      </div>
+
+      <div class="right box">
+        <h2>Contact us</h2>
+        <div class="content">
+          <form action="#">
+            <div class="email">
+              <div class="text">Email *</div>
+              <input type="email" required>
+            </div>
+            <div class="msg">
+              <div class="text">Message *</div>
+              <textarea rows="2" cols="25" required></textarea>
+            </div>
+            <div class="btn">
+              <button type="submit">Send</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </footer>
+
 </body>
 </html>
