--- a/Kontak.HTML
+++ b/Kontak.HTML
@@ -19,7 +19,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="Profile.HTML">Profile</a></li>
         <li><a href="Portofolio.HTML">Portofolio</a></li>
-        <li><a href="Services.HTML">Services</a></li>        <
+        <li><a href="Services.HTML">Services</a></li>
         <li><a href="Kontak.HTML">Kontak</a></li>
       </ul>
       <div class="toggle" onclick="toggleMenu()"></div>
