--- a/Services.HTML
+++ b/Services.HTML
@@ -49,7 +49,7 @@
 
         <div class="baganourser">
           <i class="fa-solid fa-clipboard-user"></i>
-          <h4>Tenant Attendance</h4>
+          <h4>Tenant Management</h4>
           <p>Menghadirkan solusi digital dalam pengelolaan untuk client yang memiliki banyak kios, ruko, toko, apartemen, rumah kontrakan, dan koskosan.</p>
         </div>
 
