--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="Profile.HTML">Profile</a></li>
         <li><a href="Portofolio.HTML">Portofolio</a></li>
         <li><a href="Services.HTML">Services</a></li>        
-        <li><a href="Kontak.HTML">Kontak</a></li>
+        <li><a href="Kontak.HTML">Contact</a></li>
       </ul>
       <div class="toggle" onclick="toggleMenu()"></div>
     </header>
@@ -115,25 +115,11 @@
     "Krida mampu menerjemahkan kebutuhan PRABHU menjadi tools absensi, HRIS dan payroll yang powerful. Web dan aplikasi yang mereka tawarkan user friendly, mudah digunakan, dapat dikustomisasi sesuai kebutuhan PRABHU. Krida juga memiliki support team yang baik dan responsif sehingga sampai saat ini tidak ada kendala berarti dalam kerjasama kami.",
 },
 {
-  name: "Katey Topaz",
-  job: "Developer, TechCrew",
-  image: "profile-image-2.png",
+  name: "Iswir Aprizal",
+  job: "Danwil 3 Sumatera Selatan",
+  image: "Prabhu.png",
   testimonial:
-    "Elementum tempus egestas sed sed risus pretium quam vulputate dignissim suspendisse in est ante in nibh mauris cursus mattis molestie a iaculis at erat pellentesque adipiscing commodo elit at imperdiet dui accumsan sit amet nulla",
-},
-{
-  name: "Jae Robin",
-  job: "UI Designer, Affinity Agency",
-  image: "profile-image-3.png",
-  testimonial:
-    "Orci nulla pellentesque dignissim enim sit amet venenatis urna cursus eget nunc scelerisque viverra mauris in aliquam sem fringilla ut morbi tincidunt augue interdum velit euismod in pellentesque massa placerat duis ultricies lacus sed turpis",
-},
-{
-  name: "Nicola Blakely",
-  job: "CEO,Zeal Wheels",
-  image: "profile-image-4.png",
-  testimonial:
-    "Sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit",
+    "Selama ini tdk ada kendala menggunakan aplikasi. Respon juga cepat kalau ada anggota yg minta di login kan.",
 },
 ];
 //Current Slide
