--- a/Profile.HTML
+++ b/Profile.HTML
@@ -48,7 +48,7 @@
 
     <div class="mvv-block">
       <div class="image">
-        <img src="mission1.png" alt="">
+        <img src="mission.png" alt="">
       </div>
       <div class="content">
         <h5>Our Mission</h5>
