--- a/Profile.HTML
+++ b/Profile.HTML
@@ -18,7 +18,7 @@
         <li><a href="Profile.HTML">Profile</a></li>
         <li><a href="Portofolio.HTML">Portofolio</a></li>
         <li><a href="Services.HTML">Services</a></li>        
-        <li><a href="Kontak.HTML">Kontak</a></li>
+        <li><a href="Kontak.HTML">Contact</a></li>
       </ul>
       <div class="toggle" onclick="toggleMenu()"></div>
     </header>
