--- a/Portofolio.HTML
+++ b/Portofolio.HTML
@@ -21,7 +21,7 @@
         <li><a href="Profile.HTML">Profile</a></li>
         <li><a href="Portofolio.HTML">Portofolio</a></li>
         <li><a href="Services.HTML">Services</a></li>        
-        <li><a href="Kontak.HTML">Kontak</a></li>
+        <li><a href="Kontak.HTML">Contact</a></li>
       </ul>
       <div class="toggle" onclick="toggleMenu()"></div>
     </header>
@@ -43,27 +43,6 @@
   image: "Prabhu.png",
   testimonial:
     "PT. Krida Indotama Teknologi menjadi digitalization partner untuk PT. Perkasa Abdi Buana dengan menghadirkan database karyawan, absensi digital, employee self-service, patroli elektronik, laporan aktivitas, payroll & tax, dan timelog.",
-},
-{
-  name: "Katey Topaz",
-  job: "Developer, TechCrew",
-  image: "profile-image-2.png",
-  testimonial:
-    "Elementum tempus egestas sed sed risus pretium quam vulputate dignissim suspendisse in est ante in nibh mauris cursus mattis molestie a iaculis at erat pellentesque adipiscing commodo elit at imperdiet dui accumsan sit amet nulla",
-},
-{
-  name: "Jae Robin",
-  job: "UI Designer, Affinity Agency",
-  image: "profile-image-3.png",
-  testimonial:
-    "Orci nulla pellentesque dignissim enim sit amet venenatis urna cursus eget nunc scelerisque viverra mauris in aliquam sem fringilla ut morbi tincidunt augue interdum velit euismod in pellentesque massa placerat duis ultricies lacus sed turpis",
-},
-{
-  name: "Nicola Blakely",
-  job: "CEO,Zeal Wheels",
-  image: "profile-image-4.png",
-  testimonial:
-    "Sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit",
 },
 ];
 //Current Slide
