--- a/Kontak.HTML
+++ b/Kontak.HTML
@@ -20,7 +20,7 @@
         <li><a href="Profile.HTML">Profile</a></li>
         <li><a href="Portofolio.HTML">Portofolio</a></li>
         <li><a href="Services.HTML">Services</a></li>
-        <li><a href="Kontak.HTML">Kontak</a></li>
+        <li><a href="Kontak.HTML">Contact</a></li>
       </ul>
       <div class="toggle" onclick="toggleMenu()"></div>
     </header>
@@ -35,22 +35,22 @@
           <div class="lox">
             <div class = "icon"><i class="fa-solid fa-location-dot"></i></div>
             <div class="kalimat">
-              <h2>Alamat</h2>
-              <p>Bojong gede, buaran</p>
+              <h2>Address</h2>
+              <p>18 Office Park, Jakarta Selatan</p>
             </div>
           </div>
           <div class="lox">
             <div class = "icon"><i class="fa-solid fa-phone"></i></div>
             <div class="kalimat">
-              <h2>Telepon</h2>
-              <p>22222222222</p>
+              <h2>Telephone</h2>
+              <p>(021) 50633500</p>
             </div>
           </div>
           <div class="lox">
             <div class = "icon"><i class="fa-solid fa-envelope"></i></div>
             <div class="kalimat">
               <h2>Email</h2>
-              <p>Adrian@gmail.com</p>
+              <p>krida.technology@gmail.com</p>
             </div>
           </div>
         </div>
