--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   job: "Danwil 3 Sumatera Selatan",
   image: "Prabhu.png",
   testimonial:
-    "Selama ini tdk ada kendala menggunakan aplikasi. Respon juga cepat kalau ada anggota yg minta di login kan.",
+    "Tidak ada kendala. Respon (support) juga cepat kalau ada anggota (pengguna) yang minta di(selesasikan masalah) login kan.",
 },
 ];
 //Current Slide
