--- a/Profile.HTML
+++ b/Profile.HTML
@@ -37,7 +37,7 @@
   <div class="mvv-contianer">
     <div class="mvv-block">
       <div class="image">
-        <img src="vision.png" height="200" width="20" alt="">
+        <img src="Vision.png">
       </div>
       <div class="content">
         <h5>Our Vision</h5>
