--- a/Profile.HTML
+++ b/Profile.HTML
@@ -14,10 +14,11 @@
     <div class="circle"></div>
     <header>
       <ul class="Navi">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="Home.HTML">Home</a></li>
         <li><a href="Profile.HTML">Profile</a></li>
         <li><a href="Portofolio.HTML">Portofolio</a></li>
-        <li><a href="Services.HTML">Services</a></li>        
+        <li><a href="Services.HTML">Services</a></li>
+        <li><a href="Partner.HTML">Partner</a></li>
         <li><a href="Kontak.HTML">Contact</a></li>
       </ul>
       <div class="toggle" onclick="toggleMenu()"></div>
@@ -34,37 +35,44 @@
     </div>
   </section>
 
-  <div class="mvv-contianer">
-    <div class="mvv-block">
-      <div class="image">
-        <img src="Vision.png">
-      </div>
-      <div class="content">
-        <h5>Our Vision</h5>
-        <p class="Visi">Berinovasi tanpa batas untuk memberikan kebermanfaatan tanpa henti bagi semua klien dan pengguna.</p>
 
-      </div>
-    </div>
+  <div class="Dolar">
+    <p class="do">Our Vision and Mission</p>
+    <div class="wrapper">
+           <div class="lox">
+              <div class="front-face">
+                 <div class="icon">
+                    <i class="fa-solid fa-eye-low-vision"></i>
+                 </div>
+                 <span>Vision</span>
+              </div>
+              <div class="back-face">
+                 <span>Vision</span>
+                 <p>
+                    Berinovasi tanpa batas untuk memberikan kebermanfaatan tanpa henti bagi semua klien dan pengguna.
+                 </p>
+              </div>
+           </div>
 
-    <div class="mvv-block">
-      <div class="image">
-        <img src="mission.png" alt="">
-      </div>
-      <div class="content">
-        <h5>Our Mission</h5>
-        <ul>
-          <li>Memberikan pelayanan maksimal kepada klien.</li>
-          <li>Membantu klien dalam berinovasi yang dapat menyelesaikan permasalahan dan kendala dengan digitalisasi.</li>
-          <li>Menghadirkan solusi yang user-friendly agar mudah digunakan semua pihak.</li>
-        </ul>
-
-      </div>
-    </div>
-
-
+           <div class="lox">
+              <div class="front-face">
+                 <div class="icon">
+                    <i class="fas fa-rocket"></i>
+                 </div>
+                 <span>Mission</span>
+              </div>
+              <div class="back-face">
+                 <span>Mission</span>
+                 <p>
+                    Memberikan pelayanan maksimal kepada klien, membantu klien dalam berinovasi yang dapat menyelesaikan permasalahan dan kendala dengan digitalisasi, dan menghadirkan solusi yang user-friendly agar mudah digunakan semua pihak.</p>
+              </div>
+           </div>
+        </div>
   </div>
 
- 
+
+
+
 
   <script type="text/javascript">
   function toggleMenu(){
@@ -131,5 +139,6 @@
       </div>
     </div>
   </footer>
+
 </body>
 </html>
