--- a/Kontak.HTML
+++ b/Kontak.HTML
@@ -16,11 +16,11 @@
   <section>
     <header>
       <ul class="Navi">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="Profile.HTML">Profile</a></li>
-        <li><a href="Portofolio.HTML">Portofolio</a></li>
-        <li><a href="Services.HTML">Services</a></li>
-        <li><a href="Kontak.HTML">Contact</a></li>
+        <li><a href="./">Home</a></li>
+        <li><a href="./Profile">Profile</a></li>
+        <li><a href="./Portofolio">Portofolio</a></li>
+        <li><a href="./Services">Services</a></li>        
+        <li><a href="./Kontak">Contact</a></li>
       </ul>
       <div class="toggle" onclick="toggleMenu()"></div>
     </header>
