--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <ul class="Navi">
         <li><a href="./">Home</a></li>
         <li><a href="Profile.HTML">Profile</a></li>
-        <li><a href="./Portofolio">Portofolio</a></li>
-        <li><a href="./Services">Services</a></li>        
+        <li><a href="../Portofolio">Portofolio</a></li>
+        <li><a href="Services.HTML">Services</a></li>        
         <li><a href="./Kontak">Contact</a></li>
       </ul>
       <div class="toggle" onclick="toggleMenu()"></div>
