--- a/Profile.html
+++ b/Profile.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Krida</title>
+  <title>Krida Technologies</title>
+  <link rel="icon" href="krida.png" type="image/x-icon">  
   <link rel="stylesheet" href="Profile.css">
   <script src="https://kit.fontawesome.com/457033bed9.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -62,8 +63,11 @@
               </div>
               <div class="back-face">
                  <span>Mission</span>
-                 <p>
-                    Memberikan pelayanan maksimal kepada klien, membantu klien dalam berinovasi yang dapat menyelesaikan permasalahan dan kendala dengan digitalisasi, dan menghadirkan solusi yang user-friendly agar mudah digunakan semua pihak.</p>
+                 <ul class="pi">
+                   <li>Memberikan pelayanan maksimal kepada klien</li>
+                   <li>Membantu klien dalam berinovasi yang dapat menyelesaikan permasalahan dan kendala dengan digitalisasi</li>
+                   <li>Menghadirkan solusi yang user-friendly agar mudah digunakan semua pihak</li>
+                 </ul>
               </div>
            </div>
         </div>
