--- a/Services.html
+++ b/Services.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Krida</title>
+  <title>Krida Technologies</title>
+  <link rel="icon" href="krida.png" type="image/x-icon">  
   <link rel="stylesheet" href="Services.css">
   <script src="https://kit.fontawesome.com/457033bed9.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
